<resources>
    <string name="app_name">mVentory</string>
    <string name="activity_main_name">@string/home</string>
    <string name="activity_welcome_name">mVentory</string>
    <string name="activity_settings_name">Configuration</string>
    <string name="activity_order_shipping_name">Order Shipping</string>
    <string name="activity_product_create_name">Product Create</string>
    <string name="activity_product_edit_name">Product Edit</string>
    <string name="activity_product_details_name">Product Details</string>
    <string name="activity_product_list_name">Product List</string>
    <string name="activity_photo_edit_name">Photo preview</string>
    <string name="activity_scan_name">Scan</string>
    <string name="activity_queue_name">Queue</string>
    <string name="activity_queue_pending_name">Pending jobs</string>
    <string name="activity_queue_failed_name">Failed jobs</string>
    <string name="activity_order_list_name">Order List</string>
    <string name="activity_order_details_name">Order Details</string>
    <string name="activity_camera_sync_name">Camera Time Sync</string>
    <string name="activity_library_name">Library</string>
    <string name="activity_photo_view_name">Photo view</string>
    <string name="activity_web_name">Web</string>
    <string name="activity_help_name">@string/menu_help</string>
    <string name="activity_gesture_input">Input via gesture</string>
    <string name="refresh">Refresh</string>
    <string name="create">Create</string>
    <string name="product_name">Name</string>
    <string name="product_price">Price</string>
    <string name="sku">SKU</string>
    <string name="user">User</string>
    <string name="pass">Password</string>
    <string name="url">Store URL</string>
    <string name="selected_store">Selected store</string>
    <string name="phone_time">Phone time from image</string>
    <string name="cam_time">Camera time from EXIF</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="button_addnewprofile">Add new profile</string>
    <string name="button_clearcache">Clear Cache</string>
    <string name="button_createsave">Quick create </string>
    <string name="button_wipedata">Data Cleanup</string>
    <string name="button_camerasync">Time Sync</string>
    <string name="button_queue">Queue</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_sync">Synchronise</string>
    <string name="description">Description</string>
    <string name="status">Status</string>
    <string name="weight">Weight, kg</string>
    <string name="weight_kg">Weight, kg</string>
    <string name="Categories">Categories</string>
    <string name="Magventory_title">mVentory</string>
    <string name="home">Home</string>
    <string name="new_product">New Product</string>
    <string name="products">Products</string>
    <string name="product_details">Details</string>
    <string name="loading_products">Loading products&#8230;</string>
    <string name="data_load_failure">Data load failure</string>
    <string name="check_your_internet_retry">Check your Internet connection and try again.</string>
    <string name="try_again">Try again</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="invalid_product_id">Invalid product id</string>
    <string name="invalid_price_information">Invalid price information</string>
    <string name="external_photos">Ext. photos</string>
    <string name="service">Service</string>
    <string name="sound">Sound</string>
    <string name="add_image">Add image</string>
    <string name="onClick">onClick</string>
    <string name="rotate_left">Rotate left</string>
    <string name="crop">Crop</string>
    <string name="rotate_right">Rotate right</string>
    <string name="X">X</string>
    <string name="loading_categories_and_attr_sets">Loading categories and product types&#8230;</string>
    <string name="loading_attr_sets">Loading product types&#8230;</string>
    <string name="loading_attrs_list">Loading attributes&#8230;</string>
    <string name="loading_recent_web_addresses_list">Loading recent web addresses&#8230;</string>
    <string name="attr_set">Product type</string>
    <string name="category">Category</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="quantity">Quantity</string>
    <string name="qty">Qty</string>
    <string name="statnew">New</string>
    <string name="quantityDefault">1</string>
    <string name="total">Total</string>
    <string name="price">Price</string>
    <string name="special_price">Special Price</string>
    <string name="images">Images</string>
    <string name="edit">Edit</string>
    <string name="sold">Sell now</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="enabled">Visible</string>
    <string name="queue">Queue</string>
    <string name="clear_queue">Clear the queue</string>
    <string name="view_processing_queue">View processing queue</string>
    <string name="retry_failed">Retry failed</string>
    <string name="report_errors">Report Errors</string>
    <string name="report_status">Report status</string>
    <string name="settings">Settings</string>
    <string name="categories">Categories</string>
    <string name="sell">Sell</string>
    <string name="details_sku_text">Sku</string>
    <string name="update">Update</string>
    <string name="attributes">Attributes</string>
    <string name="general">General</string>
    <string name="clear">Clear</string>
    <string name="long_tab_to_scan">Press and hold to scan</string>
    <string name="long_tap_to_more_options">Hold for more</string>
    <string name="barcode">Manufacturer code</string>
    <string name="auctions">Auctions</string>
    <string name="creation">Creation</string>
    <string name="google_book_api_key">Google Books API key</string>
    <string name="web_view_user_agent">WebView User-Agent</string>
    <string name="web_view_user_agent_hint">Leave empty for default user-agent</string>
    <string name="gallery_photos_directory">Gallery photos directory</string>
    <string name="error_report_recipient">Error report recipient</string>
    <string name="max_image_height_px">Max image height (px)</string>
    <string name="max_image_width_px">Max image width (px)</string>
    <string name="siblings">Siblings</string>
    <string name="collapse">Collapse</string>
    <string name="disk_caches_cleared_message">The disk caches has been cleared</string>
    <string name="no_internet_access">Internet connection is not available</string>
    <string name="cannot_check_sku">Cannot check SKU: %1$s</string>
    <string name="cannot_check_sku_default">Cannot check SKU  %1$s</string>
    <string name="upload_photos">Upload</string>
    <string name="product_not_found_enter_new_one_question">Product not found. Enter a new one?</string>
    <string name="product_not_found">Product not found.</string>
    <string name="product_not_found2">Product %1$s not found.</string>
    <string name="product_doesnt_have_attribute_value">Selected product has no value for %1$s attribute.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cant_connect_to_server_to_check_code_offline_work">Cannot connect to the server to check the code. Working offline.</string>
    <string name="info">Info</string>
    <string name="add_new_value_item">Add new value&#8230;</string>
    <string name="pleaseSpecifyFirst">Please specify %1$s first!</string>
    <string name="fieldCannotBeBlank">%1$s field cannot be blank!</string>
    <string name="price_edit_dialog_title">Edit prices</string>
    <string name="product_original_price">Regular</string>
    <string name="product_special_price">Special</string>
    <string name="product_special_price_discount">% off</string>
    <string name="product_special_price_date_from">Date from</string>
    <string name="product_special_price_date_to">Date To</string>
    <string name="product_special_price_clear">Clear</string>
    <string name="specified_value_is_invalid">The specified value for the %1$s is invalid</string>
    <string name="date_from_after_date_to">\'Date from\' should be before \'Date to\'</string>
    <string name="product_list_item_description"><![CDATA[%1$s <font color="#1b7fcd">x</font> %2$s <font color="#1b7fcd">|</font> %3$s ]]></string>
    <string name="product_list_item_description_with_special_price"><![CDATA[%1$s <font color="#1b7fcd">(</font>%4$s<font color="#1b7fcd">)</font> <font color="#1b7fcd">x</font> %2$s <font color="#1b7fcd">|</font> %3$s ]]></string>
    <string name="no_products">No products</string>
    <string name="filter_products_hint">Filter by name or SKU&#8230;</string>
    <string name="disabled_product_selected_hint">You cannot select the same product for this operation. Please select a different product.</string>
    <string name="normal_price_active_status">Special: $%1$s, %2$s%% off, %3$s</string>
    <string name="normal_price_active_status_without_dates">Special: $%1$s, %2$s%% off</string>
    <string name="special_price_active_status">Regular: $%1$s, %2$s%% off, %3$s</string>
    <string name="special_price_active_status_without_dates">Regular: $%1$s, %2$s%% off</string>
    <string name="special_price_data_not_available">-</string>
    <string name="save_changes_question">Save changes now?</string>
    <string name="confirmation">Confirmation</string>
    <string name="update_product_now_question">Do you want to update the product now?</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_add_barcodes">Add barcodes</string>
    <string name="menu_duplicate">Duplicate</string>
    <string name="menu_tm_list">List on TM</string>
    <string name="menu_view_online">View online</string>
    <string name="menu_share">Share</string>
    <string name="share_dialog_title">Choose an application to share data with</string>
    <string name="image_upload_failed">Image upload failed&#8230;</string>
    <string name="image_upload_waiting_for_connection">Waiting for Wi-fi. Disable Wi-fi to upload via mobile connection.</string>
    <string name="product_was_deleted_message">The product %1$s was deleted or merged with some other product.</string>
    <string name="menu_home">Home</string>
    <string name="menu_help">Help</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_products">Products</string>
    <string name="menu_new">New</string>
    <string name="menu_navscan">Scan</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_orderlist">Orders</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_decode">Decode</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_view_and_edit">View and edit</string>
    <string name="menu_ignore">Ignore</string>
    <string name="menu_ignore_all_from_now">Ignore all from now</string>
    <string name="menu_match_by_time">Match by time</string>
    <string name="menu_match_with_shift">Match by time with offset</string>
    <string name="menu_sync_with_camera">Sync with camera</string>
    <string name="menu_display_sync">Display sync code</string>
    <string name="menu_search_the_internet">Internet search</string>
    <string name="menu_gesture_input">Gesture input</string>
    <string name="menu_normal_keyboard">Normal keyboard</string>
    <string name="menu_numeric_keyboard">Numeric keyboard</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_copy_from_another">Copy from another product</string>
    <string name="menu_scan_free_text">Scan free text</string>
</resources>