<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_decode"
        android:title="@string/menu_decode"/>
    <item
        android:id="@+id/menu_scan"
        android:title="@string/menu_scan"/>
    <item
        android:id="@+id/menu_view_and_edit"
        android:title="@string/menu_view_and_edit"/>
    <item
        android:id="@+id/menu_match"
        android:title="@string/menu_match_by_time"/>
    <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_delete"/>
    <item
        android:id="@+id/menu_ignore"
        android:title="@string/menu_ignore"/>
    <item
        android:id="@+id/menu_ignore_all_from_now"
        android:title="@string/menu_ignore_all_from_now"/>
    <item
        android:id="@+id/menu_match_with_shift"
        android:title="@string/menu_match_with_shift"/>
    <item
        android:id="@+id/menu_sync"
        android:title="@string/menu_sync_with_camera"/>
    <item
        android:id="@+id/menu_display_sync"
        android:title="@string/menu_display_sync"/>

</menu>