<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2014 mVentory Ltd. (http://mventory.com)
* 
* License       http://creativecommons.org/licenses/by-nc-nd/4.0/
* 
* NonCommercial — You may not use the material for commercial purposes. 
* NoDerivatives — If you compile, transform, or build upon the material,
* you may not distribute the modified material. 
* Attribution — You must give appropriate credit, provide a link to the license,
* and indicate if changes were made. You may do so in any reasonable manner, 
* but not in any way that suggests the licensor endorses you or your use. 
*
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_paste"
        android:title="@string/menu_paste"/>
    <item
        android:id="@+id/menu_normal_keyboard"
        android:icon="@drawable/ic_input_standard_keyboard"
        android:title="@string/menu_normal_keyboard"/>
    <item
        android:id="@+id/menu_numeric_keyboard"
        android:icon="@drawable/ic_input_numeric_keyboard"
        android:title="@string/menu_numeric_keyboard"/>
    <item
        android:id="@+id/menu_scan_free_text"
        android:icon="@drawable/ic_input_scan"
        android:title="@string/menu_scan_free_text"/>
    <item
        android:id="@+id/menu_gesture_input"
        android:icon="@drawable/ic_input_gestures"
        android:title="@string/menu_gesture_input"/>
    <item
        android:id="@+id/menu_search_the_internet"
        android:icon="@drawable/ic_input_net_search"
        android:title="@string/menu_search_the_internet"/>
    <item
        android:id="@+id/menu_copy_from_another"
        android:icon="@drawable/ic_input_copy"
        android:title="@string/menu_copy_from_another"/>

</menu>