<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2014 mVentory Ltd. (http://mventory.com)
* 
* License       http://creativecommons.org/licenses/by-nc-nd/4.0/
* 
* NonCommercial — You may not use the material for commercial purposes. 
* NoDerivatives — If you compile, transform, or build upon the material,
* you may not distribute the modified material. 
* Attribution — You must give appropriate credit, provide a link to the license,
* and indicate if changes were made. You may do so in any reasonable manner, 
* but not in any way that suggests the licensor endorses you or your use. 
*
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_menu_home"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_home">
    </item>
    <item
        android:id="@+id/menu_scan"
        android:icon="@drawable/ic_menu_scan"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/menu_navscan">
    </item>
    <item
        android:id="@+id/menu_new"
        android:icon="@drawable/ic_menu_add"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/menu_new">
    </item>
    <item
        android:id="@+id/menu_products"
        android:icon="@drawable/ic_menu_search_prods"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/menu_products">
    </item>
    <item
        android:id="@+id/menu_orderlist"
        android:icon="@drawable/ic_menu_orders"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/menu_orderlist">
    </item>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:orderInCategory="105"
        android:showAsAction="never"
        android:title="@string/menu_refresh">
    </item>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_menu_settings"
        android:orderInCategory="106"
        android:showAsAction="never"
        android:title="@string/menu_settings">
    </item>

</menu>