<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sku"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <EditText
        android:id="@+id/product_sku_input_express"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"
        android:hint="Long tab to Scan" 
        android:textAppearance="@android:style/TextAppearance.Medium" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_price"
        android:textAppearance="@android:style/TextAppearance.Medium" />

     <EditText
         android:id="@+id/product_price_input_express"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:imeOptions="actionNext"
         android:inputType="numberDecimal" 
         android:textAppearance="@android:style/TextAppearance.Medium" />
                      
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/quantity"
         android:textAppearance="@android:style/TextAppearance.Medium" />

     <EditText
         android:id="@+id/quantity_input_express"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:imeOptions="actionNext"
         android:inputType="number" 
         android:textAppearance="@android:style/TextAppearance.Medium" />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/description"
         android:textAppearance="@android:style/TextAppearance.Medium" />

     <EditText
         android:id="@+id/description_input_express"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:imeOptions="actionNext"
         android:inputType="textMultiLine" 
         android:textAppearance="@android:style/TextAppearance.Medium" />
    
     <Button android:id="@+id/express_sell_sold_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/sold"/>
          
</LinearLayout>