<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2014 mVentory Ltd. (http://mventory.com)
* 
* License       http://creativecommons.org/licenses/by-nc-nd/4.0/
* 
* NonCommercial — You may not use the material for commercial purposes. 
* NoDerivatives — If you compile, transform, or build upon the material,
* you may not distribute the modified material. 
* Attribution — You must give appropriate credit, provide a link to the license,
* and indicate if changes were made. You may do so in any reasonable manner, 
* but not in any way that suggests the licensor endorses you or your use. 
*
 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="Global settings:"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonGeneralExpand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="collapse" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/generalSection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_report_recipient"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/error_report_recipient_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery_photos_directory"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/gallery_photos_directory_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google_book_api_key"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/google_book_api_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text" />

            <CheckBox
                android:id="@+id/enable_sound_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound" >
            </CheckBox>

            <SeekBar
                android:id="@+id/soundVolumeSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100" />

            <CheckBox
                android:id="@+id/new_products_enabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Products Enabled" >
            </CheckBox>

            <CheckBox
                android:id="@+id/service_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service" >
            </CheckBox>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/wipeDataButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_wipedata" />

                <Button
                    android:id="@+id/cameraSync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/button_camerasync" />

                <Button
                    android:id="@+id/queueButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_queue" />
            </LinearLayout>

            <Button
                android:id="@+id/save_global_settings_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Save" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="#FF909090" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="Profile settings:"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_store"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/urls_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/not_working_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Settings not working."
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile ID"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/profile_id_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/user_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/pass_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/url_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textUri" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_image_width_px"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <EditText
            android:id="@+id/max_image_width_px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_image_height_px"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <EditText
            android:id="@+id/max_image_height_px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/clearCacheButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_clearcache" />

            <Button
                android:id="@+id/deletebutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_delete" />

            <Button
                android:id="@+id/save_profile_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Save" />
        </LinearLayout>

        <Button
            android:id="@+id/newbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_addnewprofile" />
    </LinearLayout>

</ScrollView>